ff策略的一个bug